# TSA_forecast_app

./: .gitignore  pyproject.toml
data/: forecast_data.csv  sales_data.csv
src/: adaptive_module.py  data_manager.py  forecast_model.py  run_forecast.py  run_sarima_org.py  visualize.py
