[build-system]
requires = ["setuptools>=68", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "fashion-abi"
version = "0.1.0"
description = "A simple adaptive business intelligence (ABI) system for a fashion store using time series forecasting and inventory optimization."
authors = [
    {name = "Chengfeng Li", email = "lic96@myunitec.ac.nz"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "pulp>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0"
]
[project.scripts]
fashion-abi = "fashion_abi.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
